--- a/results_2.tex
+++ b/results_2.tex
@@ -35,7 +35,15 @@ The steel, concrete, and plastic decarbonization roadmaps here analyzed are pres
 \subsubsection{Steel and iron}
 \label{sec:steel_and_iron}
 
-Steel and iron are characterized by being a large and technologically complex industry with high capital intensity. The most recent data available shows that global consumption during 2022 is 1834 million metric tons (Mt), 61 with more than half used by China (Fig. x), though China’s steel demand is projected to gradually decline by around 40\% through 2050\autocite{rissman2020technologies} under the synergistic effect of technology promotion and production structure adjustment. In the short term, China will depend more on technology improvement; in the long term, particularly after 2040, promotion of the production structure adjustment will be the main force.\autocite{zhang2018comprehensive}
+Steel and iron are characterized by being a large and technologically complex industry with high capital intensity. The most recent data available shows that global consumption during 2022 is 1834 million metric tons (Mt), 61 with more than half used by China (\autoref{fig:steel}), though China’s steel demand is projected to gradually decline by around 40\% through 2050\autocite{rissman2020technologies} under the synergistic effect of technology promotion and production structure adjustment. In the short term, China will depend more on technology improvement; in the long term, particularly after 2040, promotion of the production structure adjustment will be the main force.\autocite{zhang2018comprehensive}
+
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=0.5]{plots/results/decarbonization/steel.png}
+  \caption[Steel usage by region and/or country in 2022]{\textbf{Steel usage by region and/or country in 2022}. World-wide consumption in 2022 is 1,834 Mt. Others denote: Africa, Australia and New Zealand, Central and South America, and the Middle East with a steel usage percentage of 2\%, 0.4\%, 2.8\%, and 2.6\%, respectively. Data obtained from.\autocite{worldsteel2022world}}
+  \label{fig:steel}
+\end{figure}
+
 
 The two dominant steel production processes which contribute to 95\% of steel hot metal (HM) production are: \textbf{1)} blast furnace-basic oxygen furnace (BF-BOF) and \textbf{2)} electric arc furnace (EAF), 71\% and 24\% respectively.\autocite{fan2021low} The first, BF-BOF, blows currents of air to turn iron ore, mixed with coal and smelting agents such as limestone, into molten metal. The second, EAF, uses electricity passed through giant electrodes to create a fiery arc in which the temperature reaches 3,000 °C. The furnaces often process recycled scrap metal and scrap substitutes, including pig iron and direct reduced iron (DRI), which is made using natural gas, to produce steel.\autocite{mckinsey_2020}
 
@@ -67,9 +75,23 @@ In this work, we are going to thoroughly describe 3 pathways to reduce carbon em
 \subsubsection{Cement and concrete}
 \label{sec:cement_and_concrete}
 
-As a key concrete component, cement is a major contributor to climate change. There is currently no concrete substitute that can meet its functional capacity. Concrete is the most widely used construction material in the world, with more than 4 billion tonnes of cement produced each year, leading to more than 7-8\% of annual anthropogenic GHG emissions, which result from both energy use and chemical reactions.\autocite{cement2021concrete} Nowadays, the global demand is largely driven by China and other Asian countries\autocite{iea_2020} (Fig. x).
+As a key concrete component, cement is a major contributor to climate change. There is currently no concrete substitute that can meet its functional capacity. Concrete is the most widely used construction material in the world, with more than 4 billion tonnes of cement produced each year, leading to more than 7-8\% of annual anthropogenic GHG emissions, which result from both energy use and chemical reactions.\autocite{cement2021concrete} Nowadays, the global demand is largely driven by China and other Asian countries\autocite{iea_2020} (\autoref{fig:cement}).
 
-From 1990 to 2020, the industry has reduced its emissions proportionately (per unit of product) by around 20\%, predominantly through clinker substitution and fuel-side measures. A significant acceleration of decarbonisation measures needs to take place to achieve the same reduction in only a decade.\autocite{cement2021concrete} Concrete naturally absorbs CO$_2$ since it carbonates throughout the course of its lifecycle. This process is known as recarbonation. Then, after its useful life has ended, it is crushed to be used as recycled aggregate. The total reduction in concrete emissions due to this resorption is calculated at 6\%\autocite{aus_2022} (fig. x). The actions to achieve a net zero concrete industry are: "carbon capture and utilization/storage", which will account for 36\% of the total CO$_2$ emissions savings in 2050, while "efficiency in design and construction" will be responsible for 22\%, and "savings in clinker production" for 11\%. Other actions considered include: improving efficiency in concrete production; the decarbonisation of electricity; and savings in cement and binders. 
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=0.5]{plots/results/decarbonization/cement.png}
+  \caption[Cement demand by region and/or country in 2020]{\textbf{Cement demand by region and/or country in 2020}. Each percentage is based on the cement world total consumption, which is 1900 million tonnes. Data obtained from.\autocite{iea_2020}}
+  \label{fig:cement}
+\end{figure}
+
+From 1990 to 2020, the industry has reduced its emissions proportionately (per unit of product) by around 20\%, predominantly through clinker substitution and fuel-side measures. A significant acceleration of decarbonisation measures needs to take place to achieve the same reduction in only a decade.\autocite{cement2021concrete} Concrete naturally absorbs CO$_2$ since it carbonates throughout the course of its lifecycle. This process is known as recarbonation. Then, after its useful life has ended, it is crushed to be used as recycled aggregate. The total reduction in concrete emissions due to this resorption is calculated at 6\%\autocite{aus_2022} (\autoref{fig:co2}). The actions to achieve a net zero concrete industry are: "carbon capture and utilization/storage", which will account for 36\% of the total CO$_2$ emissions savings in 2050, while "efficiency in design and construction" will be responsible for 22\%, and "savings in clinker production" for 11\%. Other actions considered include: improving efficiency in concrete production; the decarbonisation of electricity; and savings in cement and binders.
+
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=0.5]{plots/results/decarbonization/co2.png}
+  \caption[Sources of percentage contribution to net zero and CO$_2$ emission saving in 2050]{\textbf{Sources of percentage contribution to net zero and CO$_2$ emission saving in 2050}. Data obtained from.\autocite{aus_2022}}
+  \label{fig:co2}
+\end{figure}
 
 According to Lehne \textit{et al.},\autocite{lehne2018making} the 3 main pathways to reduce carbon emissions from concrete production are:
 
@@ -93,7 +115,15 @@ Data from Plastics Europe states that in 2018 approximately a third of plastic w
 
 The largest uses include tubing, piping, ducting and guttering (PVC, PP, HDPE); thermal and acoustic insulation (PUR, PS); door and window frames and other external profiling such as cladding, flooring, soffits and fascia boards, and cabling (PVC); and waterproofing and linings (PE, PVC). These are often long-lasting applications, where the material is fit for purpose for its intended function.\autocite{asbp_2020} In the case of cladding and flooring, they can be ephemeral, especially in fairs, congresses, shops or businesses that often change their location or owner.
 
-The difference in economic incentives between users and suppliers is a market failure. While cheaper initially, plastic components may need to be replaced more often than non-plastic alternatives, obtaining the construction firms the benefit from plastics uniformity, which makes them easier to manufacture and install, requiring less specialist knowledge.\autocite{pickard2020phasing} Moreover, plastic usage has increased by China regulation. In China, official mandates to minimize the use of wood shifted the demand to uPVC profiles (Markets Insider, 2017). Additionally, China is the major plastic consumer with 32\% (fig. X) 
+The difference in economic incentives between users and suppliers is a market failure. While cheaper initially, plastic components may need to be replaced more often than non-plastic alternatives, obtaining the construction firms the benefit from plastics uniformity, which makes them easier to manufacture and install, requiring less specialist knowledge.\autocite{pickard2020phasing} Moreover, plastic usage has increased by China regulation. In China, official mandates to minimize the use of wood shifted the demand to uPVC profiles (Markets Insider, 2017). Additionally, China is the major plastic consumer with 32\% (\autoref{fig:plastic}) 
+
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=0.5]{plots/results/decarbonization/plastic.png}
+  \caption[Plastic distribution by region and/or country in 2020]{\textbf{Plastic distribution by region and/or country in 2020}. Each percentage is based on the plastic world total consumption, which is 367 Mt. Data obtained from.\autocite{plasticseurpo_2021}}
+  \label{fig:plastic}
+\end{figure}
+
 
 The majority of the alternatives to fossil-based plastics produced in 2050 will be less carbon-intensive as a result of the energy sector's decarbonization.\autocite{pickard2020phasing} These strategies have been concentrated on the emissions embodied in steel and concrete, which are mainly employed for structural purposes (such as foundations, walls and load-bearing supports), with many plastic components not considered in minimum embodied emission analyses.\autocite{elkerbout2021impact} This may be because the embodied emissions in plastics are a small proportion of a building’s total mass. However, the weight is not dependent on the impact on GHG emissions that the material contributes. The WGBC (2019) report\autocite{world2019worldgbc} explicitly mentions plastics, suggesting a more holistic view that includes this material. 
 
