4 second tranch done

--- a/results_1.tex
+++ b/results_1.tex
@@ -35,8 +35,20 @@ An unheard-of demand for new structures resulted from the production of military
 
 The post-World War II era, (\textit{i.e.} "Great Acceleration"), was marked by increased consumption and urban development, with traditional building materials, such as bricks and stone, in short supply while more contemporary resources were abundant.\autocite{elhacham2020global} The building products business started to grow along with the economy during the 1950s and 1960s.\autocite{agueda2016historia} Savings accumulated during the war were utilized to finance veterans' financial benefits; the purchase of new household goods fueled suburbanization; and consequently, the construction industry experienced one of its most prosperous periods during this time.\autocite{jester2014twentieth} It was widely believed that mass production would satisfy practically all needs, and in order to achieve mass production, the government needed to actively engage in economic matters and support research and development, frequently in collaboration with universities, producing improvement initiatives like public housing, urban development, and transportation.\autocite{harwood1969emergence}
 
+Thus, research and development into building materials increased, notably in applications involving prestressed concrete, after a greater understanding of the matrix's makeup and the conditions that led to curing. The first places where precast concrete panels were used were in the war-torn inner cities of Europe.\autocite{krausmann2009growth} Additionally, carpenters found that they could frequently earn more money by forgoing their regular trade to create the formwork for pouring walls and decks.\autocite{erlich1986our}
+
+Surprisingly, during the cold war, the two superpowers—the US and the USSR—entered into a frantic arms race where large budgets were invested in achieving technological dominance in order to dissuade the adversary from attacking. Subsequently, in the 1950s, the first civil nuclear power plants appeared;\autocite{lepage2015atlas} oil took off as vehicle purchases soared; and the invention of the Bunsen burner opened up new opportunities to use natural gas in households. As pipelines came into place, gas became a major source of energy for home heating, cooking, water heaters, and other appliances.\autocite{smil2000energy} 
+
+As manuals and regulations were highlighted, including Neufert’s book, the "Art of projecting in architecture", new machinery and appliances were integrated into the standard house. For instance, the modern electric traction elevator, which was created as a result of the switch from hydraulic to electric engines. After the war, the US was faced with the challenge of integrating thousands of disabled soldiers into employment and education. The development of assistive technology began with this as the first comprehensive study of the subject.\autocite{prisco2019short} The first barrier-free building standards were published in 1961, but it wasn't until 1991—30 years later—that the "Standards for Accessible Design" were put into effect as binding law. The first anti-discrimination laws went into effect in 1977. The European Council adopted a resolution in the same year calling for the adaptation of housing and its immediate surroundings to the needs of the disabled,\autocite{christ2009access} promoting the use of elevators. 
+
 \subsection{Yom Kippur war}
 \label{sec:yom_kippur_war}
+
+While asphalt was a common type of road surface material in the 1960s,\autocite{elhacham2020global} for buildings, steel-and-glass boxes were the modern alternative to high-rise architecture. Through the 1960s, curtain wall building advanced quickly,\autocite{sharp2002twentieth} likewise the usage of air conditioning, raising the significance of energy consumption. Subsequently, environmental controls required a deeper understanding of scientific principles, better insulating materials, and greater site study.\autocite{jester2014twentieth} Air conditioning was a rare luxury in the 1950s, present in less than 2\% of homes across the US; by 1980, that number had increased to over 50\%, making it a standard feature.\autocite{biddle2008explaining} There wasn't a mechanical way to drastically cool air until the invention of artificial refrigeration (a thriving industry since 1900).\autocite{nagengast1999early}
+
+Moreover, the 1973 energy crisis due to the Yom Kippur War resulted in an increase in oil costs. By 1974, the price had nearly quadrupled from before the crisis and had stabilized at \$12 per barrel.\autocite{ross20131973} In the 1970s and 1980s, the world's energy policies underwent significant change as a result of the panic that the oil crisis caused. These reforms were made in anticipation of the impending, but false, depletion of the world's oil and gas reserves. In an effort to avert that fictitious disaster, non-OPEC (Organization of the Petroleum Exporting Countries) nations adopted energy-saving and investment measures,\autocite{wagner2009organization} which resulted in significant reductions in global carbon emissions.\autocite{issawi19781973} With this new vision, a stance against glass walls was formed.\autocite{jester2014twentieth}
+
+Petroleum chemistry research has led to the production of a wide range of plastics since the 1950s, when oil first came under the spotlight as a material.\autocite{krausmann2009growth} Government agencies restricted the use of plastics in the construction industry to surface coatings for a number of years due to fire and toxic gas concerns, only progressively authorizing polyvinyl chloride pipes for waste water.\autocite{koehler1955plastics}
 
 \subsection{Paris agreement}
 \label{sec:paris_agreement}
