--- a/library.bib
+++ b/library.bib
@@ -653,4 +653,14 @@ market-to-exceed-47-billion-by-2024-1001959130}",
   pages={49--56},
   year={2010}
 }
+@article{hertwich2021increased,
+  title={Increased carbon footprint of materials production driven by rise in investments},
+  author={Hertwich, Edgar G},
+  journal={Nature Geoscience},
+  volume={14},
+  number={3},
+  pages={151--155},
+  year={2021},
+  publisher={Nature Publishing Group}
+}
 
