add barplots and change subsection for results-1

--- a/results_1.tex
+++ b/results_1.tex
@@ -1,4 +1,4 @@
-\section{Construction materials from the 20th century to the beginnings of the 21st century}
+\section{Construction materials from the 20th to the beginnings of the 21st century}
 \label{sec:construction_materials}
 
 With the expansion of urbanization and the integration of new sources of energy, the construction sector went through different stages during the 20th century. The study of materials gained crucial significance as a result of historical events (\textit{e.g.} WWII and the so-called "space race" during the Cold War) with the requirement—and challenge—to minimize the environmental repercussions of energy use.\autocite{smil2000energy}
