--- a/results_2.tex
+++ b/results_2.tex
@@ -23,7 +23,15 @@ Applying the Paris Agreement and transitioning to Net Zero Carbon–and conseque
 
 Roadmaps are planning instruments, linking shorter-term targets to longer-term goals; helping align the actors and organizations of the industry to instigate technological and institutional breakthroughs to halve anthropogenic emissions each decade.\autocite{rockstrom2017roadmap} To better understand the mechanisms, challenges, and opportunities that materials face as they work toward decarbonization, we will divide the materials into two categories in this study: \textbf{1)} structural materials and \textbf{2)} operational materials. Structural materials are employed for erecting the building (\textit{e.g.} foundations, walls, and load-bearing supports) and operational materials are used for the building’s services (\textit{e.g.} thermal and acoustic insulation, lightning and air conditioning systems).
 
-The manufacturers of the materials with higher GHG emissions, have drawn up these "road maps" -and their evolution over time- not only to prove that the materials they manufacture or commercialize can be zero carbon in 2050 but also to design strategies that enable the sector’s decarbonization.\autocite{aus_2022} According to an analysis made by EXIOBASE system30, the structural materials that contributed most to the total cradle-to-gate GHG emissions in 2015 were iron and steel, being responsible for 32\% of the total GHG emissions of that year, from which the construction sector was responsible for more than 50\% of global emissions;\autocite{worldsteelassociation_2020} cement, lime, and gypsum followed with a 26\%; and within the operational materials, plastics contributed a 13\%.\autocite{hertwich2019material} (figure x) It was estimated that the construction sector was the second largest user, consuming around 10 million tonnes of plastic in 2020 (20\% of a total of 50.7 million tonnes\autocite{plasticseurpo_2021}) there is not enough information about the exact percentage of the packaging used to package construction materials.\autocite{geyer2017production}
+The manufacturers of the materials with higher GHG emissions, have drawn up these "road maps" -and their evolution over time- not only to prove that the materials they manufacture or commercialize can be zero carbon in 2050 but also to design strategies that enable the sector’s decarbonization.\autocite{aus_2022} According to an analysis made by EXIOBASE system30, the structural materials that contributed most to the total cradle-to-gate GHG emissions in 2015 were iron and steel, being responsible for 32\% of the total GHG emissions of that year, from which the construction sector was responsible for more than 50\% of global emissions;\autocite{worldsteelassociation_2020} cement, lime, and gypsum followed with a 26\%; and within the operational materials, plastics contributed a 13\%.\autocite{hertwich2019material} (\autoref{fig:ghg}) It was estimated that the construction sector was the second largest user, consuming around 10 million tonnes of plastic in 2020 (20\% of a total of 50.7 million tonnes\autocite{plasticseurpo_2021}) there is not enough information about the exact percentage of the packaging used to package construction materials.\autocite{geyer2017production}
+
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=0.3]{plots/results/decarbonization/ghgPlot.png}
+  \caption[Source of GHG emissions in 2015]{\textbf{Source of GHG emissions in 2015}. Barplots are sorted descendingly. \textbf{(A)}  GHG emissions by industry sectors. \textbf{(B)} Cradle-to-gate GHG emissions by material process. \textbf{(C)} GHG emissions by material sources. Data obtained from.\autocite{hertwich2021increased}}
+  \label{fig:ghg}
+\end{figure}
+
 
 There are several manuscripts about material-usage, \textit{e.g.} Hertwich research.\autocite{asbp_2020} The cradle-to-gate GHG global impact emissions of the materials are explained in 3 different categories, where the share is always the share of total global emissions: \textbf{(a)} by industries, \textbf{(b)} by source of GHG emissions (location where emissions occur), and \textbf{(c)} by materials. This study shows that the main industry in charge of the GHG emissions is the construction sector. And that the main impact occurs during the material production; headed by iron, cement and plastic.
 
