before paris agreement

--- a/results_1.tex
+++ b/results_1.tex
@@ -50,6 +50,16 @@ Moreover, the 1973 energy crisis due to the Yom Kippur War resulted in an increa
 
 Petroleum chemistry research has led to the production of a wide range of plastics since the 1950s, when oil first came under the spotlight as a material.\autocite{krausmann2009growth} Government agencies restricted the use of plastics in the construction industry to surface coatings for a number of years due to fire and toxic gas concerns, only progressively authorizing polyvinyl chloride pipes for waste water.\autocite{koehler1955plastics}
 
+Subsequently, new applications for plastic were: plastic floor tiles and laminated plastic, acclaimed for their beauty and toughness in demanding service environments; glass, frame, and flashing of skylights, all provided on a single continuous surface made of weather-resistant, transparent polymers; plastic foams were more flexible in terms of size, shape, and color, and they outperformed cork as thermal insulation. Technology, along with the efforts of chemists, physicists, and other experts, allowed for the creation of custom materials that could be hard, soft, plastic, rigid, brittle, opaque, colored, and transparent. 
+
+In addition to transparency and formability, glass fiber reinforcement in plastics gave them strengths that were comparable to those of steel, offering architects new design options.\autocite{koehler1955plastics} Nearly all of the artificial ones, including polymers, synthetic plastics, metallic glasses, geopolymers, composites, cermets, cements, admixed concrete, prestressed concrete, and lightweight structural materials, first appeared in the history of construction in the last century.\autocite{laffarga1997resena} The constraints to demand so much of a single material was diminished with the availability of custom materials. To meet the demands of the state-of-art normative, various materials are combined, each serving a specific purpose.\autocite{krausmann2009growth}
+
+The movement that arose from the 1970s innovations was high-tech architecture. Rooted in the avant-garde buildings of the 19th century like the Eiffel Tower and Crystal Palace, characterized by the expressive qualities of cutting-edge technologies and materials, replacing traditional construction techniques, such as brickwork, by steel, light metal panels, glass, and plastic derivatives.\autocite{sharp2002twentieth} The Pompidou Center in Paris is a representation of high-tech architecture, where the materials employed determine the shape of the building.
+
+As a consequence of the growth-stage era, some of the most advanced nations and regions began a process known as deindustrialization in the 1980s to gradually evict industrial operations from the densest urban areas,\autocite{agueda2016historia} moving major portions of the machinery used for heavy and/or regular production to less developed or emerging nations.\autocite{lopez1993ciudad} This made it easier for developed countries to comply with the Kyoto Protocol, which was established in 1997 and required them to reduce their GHG emissions, as those emissions came from the countries where the industrial sector was physically located.\autocite{agueda2016historia}
+
+The late 20th century was defined by the development of a new generation of supertall structures, or "towers". By moving away from the conventional "box-like" design, these new tubular constructions have allowed architects to significantly reduce the amount of steel needed for skyscrapers. With modern towers now frequently exceeding 100 stories, the biggest barrier to further development is safety.\autocite{sharp2002twentieth}
+
 \subsection{Paris agreement}
 \label{sec:paris_agreement}
 
