done intro table

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,10 +1,23 @@
-\section[Living Biomass and Anthropogenic Mass]{Living Biomass and Anthropogenic Mass}
-\label{sec:living_biomass_and_anthropogenic_mass}
+\section[Anthropogenic mass]{Anthropogenic mass}
+\label{sec:anthropogenic_mass}
 
-\clearpage
+\begin{table}[!htb]
+  \caption[Human Made Mass by years]{\textbf{Human Made Mass by years}. All human made mass are represented in mass by gigatons (m/Gt) from 1900 to 2020, divided into material groups. Human MM denotes human made mass. Data obtained from .\autocite{krausmann2017global}}
+  \begin{scriptsize}
+    \begin{tabulary}{0.65\linewidth}{clcccc}
+      \textbf{Human MM} & \textbf{Description} & \textbf{1900 (m/Gt)} & \textbf{1940 (m/Gt)} & \textbf{1980 (m/Gt)} & \textbf{2020 (m/Gt)} \\ \hline
+      Concrete & For building \& infrastructure & 2 & 10 & 86 & 549  \\
+      Aggregates & Gravel \& sand & 17 & 30 & 135 & 386  \\
+      Bricks & For construction & 11 & 16 & 28 & 92  \\
+      Asphalt & For road \& pavement & 0 & 1 & 22 & 65  \\
+      Metals & Iron, aluminum \& copper & 1 & 3 & 13 & 39  \\
+      Other & Wood, paper, glass \& plastic & 4 & 6 & 11 & 23  \\
+    \end{tabulary}
+  \end{scriptsize}
+  \label{tab:hmm_table}
+\end{table}
 
-\section{Scope of the Study}
-\label{sec:scope_of_the_study}
+\section[Energy sources]{Energy sources}
+\label{sec:energy_sources}
 
-\clearpage
 
