--- a/library.bib
+++ b/library.bib
@@ -663,4 +663,56 @@ market-to-exceed-47-billion-by-2024-1001959130}",
   year={2021},
   publisher={Nature Publishing Group}
 }
+@article{moghaddasi2021net,
+  title={Net zero energy buildings: variations, clarifications, and requirements in response to the Paris Agreement},
+  author={Moghaddasi, Haleh and Culp, Charles and Vanegas, Jorge and Ehsani, Mehrdad},
+  journal={Energies},
+  volume={14},
+  number={13},
+  pages={3760},
+  year={2021},
+  publisher={MDPI}
+}
+@book{friedman2005peeking,
+  title={Peeking through the keyhole: the evolution of North American Homes},
+  author={Friedman, Avi and Krawitz, David},
+  year={2005},
+  publisher={McGill-Queen's Press-MQUP}
+}
+@article{piepkorn2005natural,
+  title={The Natural Building Movement},
+  author={Piepkorn, Mark},
+  journal={Environmental Building News},
+  volume={14},
+  number={5},
+  year={2005}
+}
+@book{houben1994earth,
+  title={Earth construction: a comprehensive guide},
+  author={Houben, Hugo and Guillaud, Hubert},
+  year={1994}
+}
+@article{sonderegger2020mineral,
+  title={Mineral resources in life cycle impact assessment—part I: a critical review of existing methods},
+  author={Sonderegger, Thomas and Berger, Markus and Alvarenga, Rodrigo and Bach, Vanessa and Cimprich, Alexander and Dewulf, Jo and Frischknecht, Rolf and Guin{\'e}e, Jeroen and Helbig, Christoph and Huppertz, Tom and others},
+  journal={The International Journal of Life Cycle Assessment},
+  volume={25},
+  number={4},
+  pages={784--797},
+  year={2020},
+  publisher={Springer}
+}
+@article{krausmann2017global,
+  title={Global socioeconomic material stocks rise 23-fold over the 20th century and require half of annual resource use},
+  author={Krausmann, Fridolin and Wiedenhofer, Dominik and Lauk, Christian and Haas, Willi and Tanikawa, Hiroki and Fishman, Tomer and Miatto, Alessio and Schandl, Heinz and Haberl, Helmut},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={114},
+  number={8},
+  pages={1880--1885},
+  year={2017},
+  publisher={National Acad Sciences}
+}
+
+
+
 
