add map and new abbreviation

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -24,6 +24,7 @@
   \item[] \textbf{MP} - Material passport
   \item[] \textbf{Mt} - Metric tons
   \item[] \textbf{NAFTA} - North American Free Trade Agreement
+  \item[] \textbf{NZB} - Net Zero Energy Building
   \item[] \textbf{OPEC} - Organization of the Petroleum Exporting Countries
   \item[] \textbf{PCI} - Pulverized coal injection
   \item[] \textbf{PE} - Polyethylene
