--- a/introduction.tex
+++ b/introduction.tex
@@ -1,8 +1,18 @@
 \section[Anthropogenic mass]{Anthropogenic mass}
 \label{sec:anthropogenic_mass}
 
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=0.19]{plots/introduction/mapsIntro.png}
+  \caption[Worldwide urbanization evolution map between 1900 and 2050]{\textbf{Worldwide urbanization evolution map between 1900 and 2050}. Majority rural indicates less than 50\% of the population lives in urban areas, whereas majority urban indicates more than 50\%. Data obtained from.\autocite{ourworldindata_2020}}
+  \label{fig:ghg}
+\end{figure}
+
+
+
+
 \begin{table}[!htb]
-  \caption[Human Made Mass by years]{\textbf{Human Made Mass by years}. All human made mass are represented in mass by gigatons (m/Gt) from 1900 to 2020, divided into material groups. Human MM denotes human made mass. Data obtained from .\autocite{krausmann2017global}}
+  \caption[Human Made Mass by years]{\textbf{Human Made Mass by years}. All human made mass are represented in mass by gigatons (m/Gt) from 1900 to 2020, divided into material groups. Human MM denotes human made mass. Data obtained from.\autocite{krausmann2017global}}
   \begin{scriptsize}
     \begin{tabulary}{0.65\linewidth}{clcccc}
       \textbf{Human MM} & \textbf{Description} & \textbf{1900 (m/Gt)} & \textbf{1940 (m/Gt)} & \textbf{1980 (m/Gt)} & \textbf{2020 (m/Gt)} \\ \hline
