--- a/library.bib
+++ b/library.bib
@@ -712,7 +712,10 @@ market-to-exceed-47-billion-by-2024-1001959130}",
   year={2017},
   publisher={National Acad Sciences}
 }
-
-
-
+@misc{ECF_2020,
+  title={Bringing Buildings on Track to Reach Zero-Carbon by 2050},
+  author={European Climate Foundation},
+  year={2020},
+howpublished="\url{https://europeanclimate.org/resources/bringing-buildings-on-track-to-reach-zero-carbon-by-2050/}",
+}
 
