--- a/results_1.tex
+++ b/results_1.tex
@@ -63,3 +63,16 @@ The late 20th century was defined by the development of a new generation of supe
 \subsection{Paris agreement}
 \label{sec:paris_agreement}
 
+In contrast to the early 1900s, when the typical American home contained 700 to 1,200 square feet of living space, including two or three bedrooms and one or (just about as likely) no bathrooms, the typical home in the early 2000s had 2,000 or more square feet, three or more bedrooms, and at least 2 \(\frac{1}{2}\) baths. The garage, with room for at least two cars, was added as a standard, and almost every new home included air conditioning and fireplaces.\autocite{friedman2005peeking}
+
+Scientific experimentation will continue to expand the range of possibilities, while standardization and the real availability of resources will seem to limit the choices.\autocite{krausmann2009growth} Given the pressure of economic imperatives, the temptation is currently greater to replace rather than repair or restore 20th century structures.\autocite{jester2014twentieth} It is necessary that governments continue to increase the incentivization of the refurbishment and maintenance of the built environment. New construction rate across Europe is only 3\%,\autocite{honic2021material} while the current annual deep renovation rate stands at only 0.2\% on average. This number must dramatically (by a factor of 15) rise to reach 3\% by 2030 and be sustained through 2050 if the EU is to meet both its 2030 climate target and achieve climate neutrality by the year 2050.\autocite{sibileau2021deep}
+
+In 2015, the Paris Agreement raised an international effort toward climate mitigation. The countries that adopted the Paris Agreement released Net Zero Energy Building (NZB) projects as the primary solution to their GHG reduction targets by 2050. A variety of technologies, standards, and strategies have been published since then for materials to transition towards Net Zero, including improved energy efficiency, fuel source shift, and on-site power generation.\autocite{moghaddasi2021net} Despite the urgency to decarbonize the building industry, the European Climate Foundation presented that the sector is not currently on a trajectory to zero greenhouse gas emissions by 2050, and stressed that the current policies are insufficient to meet the target, reporting that under current policies, annual emissions from residential buildings will decrease by 30\% by 2050.\autocite{ECF_2020} 
+
+Despite the fact that concrete, steel, and plastic played a major role in urban growth during the 20th century, 40\% of the world's population was thought to be living in earthen structures by the end of the century.\autocite{houben1994earth} According to Piepkorn, with the end of inexpensive oil, there will be a movement back to lower embodied energy.\autocite{piepkorn2005natural} Since baked clay is an affordable product made from inexpensive raw materials (clay, sand, and water) and has a straightforward manufacturing process of firing, it has historically been used extensively in the construction of houses. However, since clay bricks became available in the 1980s, the market for clay-based bricks has begun to decline, partly attributable to building techniques that rely on concrete block exterior enclosures.\autocite{lozano2018comparative}
+
+The transition to a low-carbon economy will require a significant increase in the use of green technology, which will raise the demand for raw materials such as aluminum, iron, copper, and potassium since more minerals are employed in renewable energy systems than in nuclear and fossil fuel sources.\autocite{sonderegger2020mineral} In order to avoid dependence on fossil fuels, dependence on raw materials will be necessary, as predicted by the International Energy Agency, the demand for raw materials will increase globally by 30\% between 2025 and 2050.\autocite{valero2018global}
+
+
+
+
