--- a/results_2.tex
+++ b/results_2.tex
@@ -1,7 +1,7 @@
 \section{Decarbonization roadmaps}
 \label{sec:decarbonization_roadmaps}
 
-The adoption of the Paris Agreement by 190 countries in 2015 marked a significant advancement in the international response to the threat of climate change. The three major CO$_2$ emitters: China, India, and the United States, were not among the over 60 nations that had pledged to achieve carbon neutrality by 2050, according to a 2019 UN announcement, which included the United Kingdom and the European Union (with the exception of Poland).\autocite{summit2019report} Moreover, some nations have pledged to work toward earlier dates. Together, these agreements have led to growing pressure to pursue decarbonization across all industrial sectors.\autocite{hoffmann2021decarbonization}
+The adoption of the Paris Agreement by 190 countries in 2015 marked a significant advancement in the international response to the threat of climate change. The three major CO$_2$ emitters: China, India, and the United States, were not among the over 60 nations that had pledged to achieve carbon neutrality by 2050, according to a 2019 UN announcement, which included the United Kingdom and the European Union (with the exception of Poland).\autocite{summit2019report} Moreover, some nations have pledged to work toward earlier dates, as opposed to China, which pledged for achieving the 100\% Net Zero emission target before 2060.\autocite{moghaddasi2021net} Together, these agreements have led to growing pressure to pursue decarbonization across all industrial sectors.\autocite{hoffmann2021decarbonization} Nonetheless, to achieve these goals, the current NZ regulations need to be clarified.\autocite{moghaddasi2021net}
 
 Applying the Paris Agreement and transitioning to Net Zero Carbon–and consequently–being an energy-efficient society by 2050 impacts the construction lifecycle emissions mainly in two stages: \textbf{1)} processing raw materials, and \textbf{2)} operation of buildings. As stated in McKinsey's analysis\autocite{mckinsey_2020} (fig. x), opportunities to reduce the footprint of a building for the various stakeholders involved in decision-making at the various stages of a project, from financing, design, material selection, and processing, to construction and operation, are addressed. 
 
