--- a/library.bib
+++ b/library.bib
@@ -718,4 +718,17 @@ market-to-exceed-47-billion-by-2024-1001959130}",
   year={2020},
 howpublished="\url{https://europeanclimate.org/resources/bringing-buildings-on-track-to-reach-zero-carbon-by-2050/}",
 }
+@article{science2018off,
+  title={Off-site Manufacture for Construction: Building for Change},
+  author={Science and Technology Select Committee and others},
+  journal={London: House of Lords},
+  year={2018}
+}
+@misc{BRE_2015,
+  title={Design for deconstruction: case study – modular show house construction.},
+  author={BRE Group},
+  year={2015},
+howpublished="\url{www.bregroup.com/buzz/design-for-deconstruction-case-study-
+modular-show-house-construction/}",
+}
 
